--- a/collect.conf
+++ b/collect.conf
@@ -1,5 +1,5 @@
 [ECUBE]
-ecube.setuptype = docker
+ecube.setuptype = kiteos
 #comment the above and uncomment the below if you are running the docker version of ECUBE.
 #ecube.setup = docker
 
