Fixed typo for docker

--- a/collect.conf
+++ b/collect.conf
@@ -1,7 +1,7 @@
 [ECUBE]
 ecube.setuptype = kiteos
 #comment the above and uncomment the below if you are running the docker version of ECUBE.
-#ecube.setup = docker
+#ecube.setuptype = docker
 
 [KITEOS]
 # USE THE DEFAULT VALUES AS-IS
