Update to support configuration of collect scope
New parameter introduced to specify scope of collection. values 'audio' vs. 'all'.

--- a/collect.conf
+++ b/collect.conf
@@ -1,7 +1,10 @@
 [ECUBE]
+#use 'docker' instead of kiteos' for a system running ELL on KITE OS. use 'docker' for a system running ELL on docker
 ecube.setuptype = kiteos
-#comment the above and uncomment the below if you are running the docker version of ECUBE.
-#ecube.setuptype = docker
+#use 'all' instead of 'audio' to additionally dump the entire ELL database
+ecube.collectscope = audio
+ecube.tables = mdl_user mdl_assign mdl_assign_submission mdl_assignsubmission_onlinetext mdl_files
+ecube.localdb = ell-collect.db
 
 [KITEOS]
 # USE THE DEFAULT VALUES AS-IS
